added dwayne the rock johnson tools (need balancing)

--- a/src/main/resources/assets/susmod/lang/en_us.json
+++ b/src/main/resources/assets/susmod/lang/en_us.json
@@ -20,6 +20,11 @@
   "item.susmod.dwayne_chestplate": "Dwayne \"The Rock\" Johnson Chestplate",
   "item.susmod.dwayne_leggings": "Dwayne \"The Rock\" Johnson Leggings",
   "item.susmod.dwayne_boots": "Dwayne \"The Rock\" Johnson Boots",
+  "item.susmod.dwayne_sword": "Dwayne \"The Rock\" Johnson Scimitar",
+  "item.susmod.dwayne_pickaxe": "Dwayne \"The Rock\" Johnson Pickaxe",
+  "item.susmod.dwayne_axe": "Dwayne \"The Rock\" Johnson Axe",
+  "item.susmod.dwayne_shovel": "Dwayne \"The Rock\" Johnson Shovel",
+  "item.susmod.dwayne_hoe": "Dwayne \"The Rock\" Johnson Hoe",
 
   "itemGroup.susmod.standard": "Sus Mod",
   "itemGroup.susmod.discs": "Sus Mod Discs"
